# vendinsights

./: .dockerignore  .env.example  .pre-commit-config.yaml  BEST_PRACTICES.md  DEPLOYMENT_GUIDE.md  Dockerfile  FREE_TIER_DEPLOYMENT_GUIDE.md  FREE_TIER_DEPLOYMENT_QUICK.md  Makefile  README.md  asset-manifest.json  azure-pipelines.yml  decision_log.json  index.html  markdown_content_aux.odt  pyproject.toml  requirements.txt  run_local.py  setup.cfg
.github/workflows/: azure-static-web-apps-happy-stone-0d9c66203.yml  ci.yml  pages.yml  sync-decision-log-docs.yml
backend/: .flake8  __init__.py
backend/aggregate_function/: Dockerfile  __init__.py
backend/ask_function/: Dockerfile  __init__.py
backend/email_function/: Dockerfile  __init__.py
backend/ingest_function/: Dockerfile  __init__.py  requirements.txt
backend/insights_function/: Dockerfile  __init__.py  database.py  kpi_calculations.py  requirements.txt  server.py  (+1 more)
code_templates/: api_example.py  data_loading.py  feature_engineering.py  model_evaluation.py  model_training.py  pipeline_example.yml  preprocessing.py  visualization.py
docs/: FREE_TIER_DEPLOYMENT_GUIDE.md  FREE_TIER_DEPLOYMENT_QUICK.md  architecture-decisions.md  decision_log.md  gym_assessment.md  transport_hub_assessment.md  university_assessment.md
frontend/: .eslintrc.json  package-lock.json  package.json
mps_package/: __init__.py  api.py  main.py
notebooks/: template.py
scripts/: check_connectivity.py  generate_decision_log_markdown.py
simulator/: vending_simulator.py
tests/: test_data.py  test_main.py  test_models.py
(+27 files in other folders)
