[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mps_package"
version = "0.1.0"
description = "A Python package for data processing and analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=2.0.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "imbalanced-learn>=0.10.0",
    "statsmodels>=0.13.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "optuna>=3.0.0",
    "shap>=0.42.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["mps_package"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
